<resources>
    <string name="app_name">Math Operations</string>
    <string name="open" />
    <string name="close" />
    <string name="matrix_addition">Matrix Addition</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="kousar">"If not, than you can use several possibilities... You can use an Intent to send data to MainActivity. You can have a singleton instance where you store pointer to your MainActivity.  "</string>
    <string name="reactangle">REACTANGLE</string>
    <string name="circle">CIRCLE</string>
    <string name="square">SQUARE</string>
    <string name="semi_circle">SEMI CIRCLE</string>
    <string name="rhombus">RHOMBUS</string>
    <string name="hexagon">HEXAGON</string>
    <string name="cube">CUBE</string>
    <string name="sphere">SPHERE</string>
    <string name="cylinder">CYLINDER</string>
    <string name="pyramid">PYRAMID</string>
    <string name="hemisphere">HEMISPHERE</string>
    <string name="cuboid">CUBOID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
