<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.SolidGeometry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Solid Geometry"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    />
            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:columnCount="3"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cubeBtn"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/btn_color"
                    android:text="@string/cube"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sphereBtn"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/btn_color"
                    android:text="@string/sphere"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cylinderBtn"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/btn_color"
                    android:text="@string/cylinder"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pyramidBtn"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/btn_color"
                    android:text="@string/pyramid"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/hemisphereBtn"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/btn_color"
                    android:text="@string/hemisphere"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cuboidBtn"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/btn_color"
                    android:text="@string/cuboid"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/solid_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>